Removed standalone configuration support.